Fix double scroll bars. Run docco.

--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
                 new Backpack.Modal({
                   content: "<p>This Modal is a bit fancier.</p><p>It's got a classy overlay in the background. This says, 'hey look at me, I'm a Modal.'</p><p>That's what we shoot for.</p>",
                   color: 'rgba(0,0,0,0.7)',
-                  lockOverlay: false
+                  lockOverlay: false,
+                  // closable: false
                 })
               }
             }
