--- a/index.html
+++ b/index.html
@@ -212,9 +212,19 @@
                           [
                             {
                               content: 'Tab 1',
+                              tabContent: '<h2>Tab 1</h2>'
                             },
                             {
-                              content: 'Tab 2'
+                              content: 'Tab 2',
+                              tabContent: '<h2>Tab 2</h2>'
+                            },
+                            {
+                              content: 'Tab 3',
+                              tabContent: '<h2>Tab 3</h2>'
+                            },
+                            {
+                              content: 'Tab 4',
+                              tabContent: '<h2>Tab 4</h2>'
                             }
                           ]
           });
