--- a/example/index.html
+++ b/example/index.html
@@ -3,15 +3,12 @@
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <title>Backpack.js</title>
-    <link rel="stylesheet" href="./lib/css/Backpack.css" type="text/css" media="screen">
-    <link rel="stylesheet" href="./assets/css/docs.css" type="text/css" media="screen">
-    <link rel="stylesheet" href="./assets/css/prettify.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="../lib/css/Backpack.css" type="text/css" media="screen">
 
-    <script src="./vendor/jquery.js"></script>
-    <script src="./vendor/underscore.js" type="text/javascript"></script>
-    <script src="./vendor/backbone.js" type="text/javascript"></script>
-    <script src="./lib/Backpack-bundle.js" type="text/javascript"></script>
-    <!-- <script src="./assets/js/prettify.js" type="text/javascript"></script> -->
+    <script src="../vendor/jquery.js"></script>
+    <script src="../vendor/underscore.js" type="text/javascript"></script>
+    <script src="../vendor/backbone.js" type="text/javascript"></script>
+    <script src="../lib/Backpack-bundle.js" type="text/javascript"></script>
   </head>
   <body class='backpack'>
     <section id='docs' style='width: 960px; margin: 0 auto;'></section>
@@ -231,22 +228,6 @@
 
         
       });
-
-        // $(document).ready(function(){
-        //   prettyPrint();
-        // });
-
-        // var menu = new Backpack.Menu({
-        //               before: "lkajsdlkjasd",
-        //               hide: true
-        // });
-
-        // var menu = new Backpack.Menu().hide().before("kjahsdkjhasdkjahs");
-
-        // var layout = new Backpack.Layout(8);
-
-        // layout.add(menu, 2)
-        //       .add(nav)
     </script>
   </body>
 </html>
