--- a/example/index.html
+++ b/example/index.html
@@ -50,7 +50,7 @@
                                 content: "Menu Item 3"            
                               }
                             ]
-                        }),
+              }),
 
               github = new Backpack.MenuItem({ 
                             content: "Download on Github",
@@ -97,7 +97,9 @@
               'hover': function() { console.log('hover') },
               'click': function(){ 
                 new Backpack.Modal({
-                  content: "<p>This Modal is a bit fancier.</p><p>It's got a classy overlay in the background. This says, 'hey look at me, I'm a Modal.'</p><p>That's what we shoot for.</p>",
+                  content: "<p>This Modal is a bit fancier.</p>" +
+                           "<p>It's got a classy overlay in the background. This says, 'hey look at me, I'm a Modal.'</p>" +
+                           "<p>That's what we shoot for.</p>",
                   color: 'rgba(0,0,0,0.7)',
                   lockOverlay: false,
                   // closable: false
@@ -209,19 +211,33 @@
                           [
                             {
                               content: 'Tab 1',
-                              tabContent: '<h2>Tab 1</h2>'
+                              tabContent: 
+                                '<h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod' +
+                                'tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,' +
+                                'quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo' +
+                                'consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse' +
+                                'cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non' +
+                                'proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>'
                             },
                             {
                               content: 'Tab 2',
-                              tabContent: '<h2>Tab 2</h2>'
+                              tabContent: 
+                                '<h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod' +
+                                'tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,' +
+                                'quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo' +
+                                'consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse' +
+                                'cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non' +
+                                'proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>'
                             },
                             {
                               content: 'Tab 3',
-                              tabContent: '<h2>Tab 3</h2>'
-                            },
-                            {
-                              content: 'Tab 4',
-                              tabContent: '<h2>Tab 4</h2>'
+                              tabContent: 
+                                '<h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod' +
+                                'tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,' +
+                                'quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo' +
+                                'consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse' +
+                                'cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non' +
+                                'proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>'
                             }
                           ]
           });
