--- a/example/index.html
+++ b/example/index.html
@@ -212,32 +212,90 @@
                             {
                               content: 'Tab 1',
                               tabContent: 
-                                '<h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod' +
-                                'tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,' +
+                                '<h2>This is Tab 1</h2>' +
+                                '<p>tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,' +
                                 'quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo' +
                                 'consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse' +
                                 'cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non' +
-                                'proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>'
+                                'proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>'
                             },
                             {
                               content: 'Tab 2',
                               tabContent: 
-                                '<h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod' +
-                                'tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,' +
+                                '<h2>This is Tab 2</h2>' +
+                                '<p>tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,' +
                                 'quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo' +
                                 'consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse' +
                                 'cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non' +
-                                'proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>'
+                                'proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>'
                             },
                             {
                               content: 'Tab 3',
                               tabContent: 
-                                '<h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod' +
-                                'tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,' +
+                                '<h2>This is Tab 3</h2>' +
+                                '<p>tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,' +
                                 'quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo' +
                                 'consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse' +
                                 'cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non' +
-                                'proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>'
+                                'proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>'
+                            }
+                          ]
+          });
+
+          var tabs2 = new Backpack.Tabs({
+                        parent: '#docs',
+                        show: true,
+                        add: 
+                          [
+                            {
+                              content: 'Tab 1',
+                              tabContent: 
+                                '<h2>This is Tab 1</h2>' +
+                                '<p>tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,' +
+                                'quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo' +
+                                'consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse' +
+                                'cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non' +
+                                'proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>'
+                            },
+                            {
+                              content: 'Tab 2',
+                              tabContent: 
+                                '<h2>This is Tab 2</h2>' +
+                                '<p>tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,' +
+                                'quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo' +
+                                'consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse' +
+                                'cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non' +
+                                'proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>'
+                            },
+                            {
+                              content: 'Tab 3',
+                              tabContent: 
+                                '<h2>This is Tab 3</h2>' +
+                                '<p>tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,' +
+                                'quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo' +
+                                'consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse' +
+                                'cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non' +
+                                'proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>'
+                            },
+                            {
+                              content: 'Tab 4',
+                              tabContent: 
+                                '<h2>This is Tab 4</h2>' +
+                                '<p>tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,' +
+                                'quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo' +
+                                'consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse' +
+                                'cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non' +
+                                'proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>'
+                            },
+                            {
+                              content: 'Tab 5',
+                              tabContent: 
+                                '<h2>This is Tab 5</h2>' +
+                                '<p>tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,' +
+                                'quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo' +
+                                'consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse' +
+                                'cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non' +
+                                'proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>'
                             }
                           ]
           });
