--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
           <section class='bottom-60 clearfix'>
             <a href='https://github.com/airbnb/backpack.js/zipball/master' class='download button round tk-league-gothic orange'>Download Backpack.js</a>
-            <a href='https://github.com/airbnb/backpack.js' class='fork button round tk-league-gothic'>Fork on Github</a>
+            <a href='https://github.com/airbnb/backpack.js' class='fork button round tk-league-gothic'>Hosted on Github</a>
           </section>
 
           <section class='bottom-60'>
@@ -46,18 +46,18 @@
               <h3 class='title-h3'>Introduction</h3>
             </a>
             <p>
-              Backpack.js is a pack of UI components for Backbone apps. You can get your app up and running quickly with a cleaner, more structured code base. Backpack.js has been built with a focus on the creation of components - CSS files have been included to help you get up and running, but feel free to modify styles as necessary.
+              Backpack.js is a lightweight Backbone extension that provides easy-to-use, extensible UI components, and was built by a couple of Airbnb Engineers.
+            </p>
+            <p>
+              Backpack.js has been built with a focus on the creation of components - CSS files have been included to help you get up and running, but feel free to modify styles as necessary.
             </p>
 
             <p>
               After building the <a href='http://m.airbnb.com' target='_blank'>Airbnb mobile web app</a> with Backbone, we thought it would be nice to have a lightweight pack of components that we could drop in to any Backbone project.
             </p>
-            <p>
-              Backbone enabled us to move quickly while building the Airbnb mobile web app. We made Backpack.js because we want to move faster.
-            </p>
 
             <p>
-              This initial release is the result of our work abstracting components that we initially imagined and built for the Airbnb mobile site. We’ve decided to open this initial release to the community to gather feedback and welcome any contributions.
+              This initial release is the result of our work abstracting components that we initially imagined and built for the Airbnb mobile site. We would like to open this initial release to the community to hear what you guys think and welcome any contributions.
             </p>
           </section>
 
@@ -391,9 +391,9 @@ var menu = new Backpack.Menu({
             </section>
 
             <!-- 
-              ---------------------------------------
+              =======================================
                   Backpack.Modal
-              ---------------------------------------
+              =======================================
             -->
             <section class='modal description clearfix'>
               <a id='Modal'>
@@ -445,10 +445,56 @@ var lb = new Backpack.Modal({
               <h3 class='title-h3'>Hack on Backpack</h3>
             </a>
             <p>
-              Backpack.js is still it’s infancy. We’re open sourcing our progress thus far with the hope to continue to build Backpack.js along with the Backbone community. Our ultimate goal is to enable easier web application development through the use of simple, decoupled, reusable components.
+              Backpack.js is still in it's early-days. We’re open-sourcing our progress thus far with the hope to continue to build Backpack.js with the help of the Backbone community.
             </p>
+            <div class='code'>
+              <br/>
+              <p>Getting Stated</p>
+            <pre class='prettyprint linenums'>
+git clone git@github.com:airbnb/backpack.js.git
+cd backpack.js && npm install</pre>
+
+              <br/><br/>
+
+              <p>Cake Build Tools</p>
+              <pre class='prettyprint linenums'>
+cake compile        # Compile CoffeeScript source files
+
+cake build          # Creates /lib_path/Backpack-bundle.js & 
+                    # /lib_path/Backpack-bundle.min.js & 
+                    # /lib_path/js/*.js
+
+cake test           # Opens Jasmine SpecRunner. Watches
+                    # BackpackSpec-Bundle.js for changes
+
+cake docs           # Generate annotated source code 
+                    # with Docco
+
+cake watch          # Recompile CoffeeScript source files when 
+                    # modified to Backpack-bundle.js
+
+cake watch:js       # Recompile CoffeeScript source files when 
+                    # modified to individual .js files</pre>
+
+              <br/><br/>
+
+              <p>Testing</p>
+            </div>
+              <div>Backpack.js tests are written using <a href=''>jasmine</a> with <a href=''>sinon.js</a> and <a href=''>jasmine-sinon</a>.</div>
+
+              <br/>
+
+              <div>You can run the test suite with <pre class='inline'>cake test</pre>.</div>
           </section>
         </section>
+
+        <footer>
+          <p>Backpack.js was born at <a href='http://airbnb.com/jobs'>Airbnb HQ</a> in sunny San Francisco, CA</p>
+          <p>With A Lovely Backpack Logo Design by <a href='http://www.dannyprew.com/'>Danny Prew</a></p>
+          <p>Here's Backpack's <a href='https://github.com/airbnb/backpack.js/blob/master/LICENSE'>Apache 2.0 License</a></p>
+          <br/>
+          <a href='http://airbnb.com/jobs'><img src='http://a1.muscache.com/s/1318028912/images/logos/106x40.png' /></a>
+        </footer>
       </section>
 
     <script>
