--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@ var lb = new Backpack.Modal({
             </p>
             <div class='code'>
               <br/>
-              <p>Getting Stated</p>
+              <p>Getting Started</p>
             <pre class='prettyprint linenums'>
 git clone git@github.com:airbnb/backpack.js.git
 cd backpack.js && npm install</pre>
