Add twitter buttons

--- a/index.html
+++ b/index.html
@@ -36,11 +36,16 @@
             <h3 class='big-h3'>Backpack.js is a lightweight Backbone extension that provides easy-to-use, extensible UI components</h3>
             <div class='github-social'>
               <iframe src="http://markdotto.github.com/github-buttons/github-btn.html?user=airbnb&repo=backpack.js&type=watch&count=true"
-  allowtransparency="true" frameborder="0" scrolling="0" width="90px" height="30px"></iframe>
-              <iframe src="http://markdotto.github.com/github-buttons/github-btn.html?user=airbnb&repo=backpack.js&type=fork&count=true"
-  allowtransparency="true" frameborder="0" scrolling="0" width="90px" height="30px"></iframe>
-              <iframe src="http://markdotto.github.com/github-buttons/github-btn.html?user=airbnb&repo=backpack.js&type=follow"
-  allowtransparency="true" frameborder="0" scrolling="0" width="111px" height="30px"></iframe>
+                      allowtransparency="true" frameborder="0" scrolling="0" width="90px" height="30px"></iframe>
+              <iframe src="http://markdotto.github.com/github-buttons/github-btn.html?user=airbnb&repo=backpack.js&type=fork&count=true" 
+                      allowtransparency="true" frameborder="0" scrolling="0" width="90px" height="30px"></iframe>
+              <iframe src="http://markdotto.github.com/github-buttons/github-btn.html?user=airbnb&repo=backpack.js&type=follow" 
+                      allowtransparency="true" frameborder="0" scrolling="0" width="111px" height="30px"></iframe>
+              <iframe allowtransparency="true" frameborder="0" scrolling="no"
+                      src="//platform.twitter.com/widgets/tweet_button.html?url=https://git.io/backpackjs&counturl=https://airbnb.github.com/backpack.js&text=Check out Backpack.js, lightweight Backbone extension for UI components&via=airbnb"
+                      style="width:90px; height:20px;"></iframe>
+              <a href="https://twitter.com/backpackjs" class="twitter-follow-button" data-show-count="false">Follow @backpackjs</a>
+              <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
             </div>
           </section>
 
